--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 }
 
 .logo {
-  width: 150px;
+  width: 200px;
   height: auto;
   margin-bottom: 1px;
 }
@@ -34,7 +34,10 @@ h1 {
   font-size: 1.5em;
   color: #b30000;
 }
-
+h2 {
+  font-size: 1.2em;
+  color: #000000;
+}
 form label {
   display: block;
   font-weight: bold;
@@ -42,9 +45,17 @@ form label {
   text-align: left;
 }
 
-form input, form select {
+form select {
   width: 100%;
-  padding: 8px;
+  padding: 20px;
+  margin-top: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+form input {
+  width: 94%;
+  padding: 10px;
   margin-top: 4px;
   border-radius: 4px;
   border: 1px solid #ccc;
