--- a/style.css
+++ b/style.css
@@ -1,89 +1,68 @@
 body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #FF6F61, #FFD1C1);
-  color: #333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
-.container {
-  background: #cde4ef;
-  border-radius: 8px;
-  box-shadow: 0 50px 8px rgba(0, 0, 0, 0.1);
-  padding: 2em;
-  text-align: center;
-  justify-content: center;
-  max-width: 400px;
-  width: 100%;
-}
-
-header {
-  margin-bottom: 1.5em;
-}
-
-.logo {
-  width: 200px;
-  height: auto;
-  margin-bottom: 1px;
-}
-
-h1 {
-  font-size: 1.5em;
-  color: #b30000;
-}
-h2 {
-  font-size: 1.2em;
-  color: #000000;
-}
-form label {
-  display: block;
-  font-weight: bold;
-  margin-top: 1em;
-  text-align: left;
-}
-
-form select {
-  width: 100%;
-  padding: 20px;
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-}
-
-form input {
-  width: 94%;
-  padding: 10px;
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-}
-
-button {
-  background-color: #b30000;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 1em;
-  margin-top: 1.5em;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #8b0000;
-}
-
-#result {
-  margin-top: 1.5em;
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #333;
-}
-
-footer {
-  margin-top: 1.5em;
-  font-size: 0.9em;
-}
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #FF6F61, #FFD1C1);
+    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .container {
+    background: #cde4ef;
+    border-radius: 8px;
+    box-shadow: 0 50px 8px rgba(0, 0, 0, 0.1);
+    padding: 2em;
+    text-align: center;
+    justify-content: center;
+    max-width: 400px;
+    width: 100%;
+  }
+  header {
+    margin-bottom: 1.5em;
+  }
+  .logo {
+    width: 150px;
+    height: auto;
+    margin-bottom: 1px;
+  }
+  h1 {
+    font-size: 1.5em;
+    color: #b30000;
+  }
+  form label {
+    display: block;
+    font-weight: bold;
+    margin-top: 1em;
+    text-align: left;
+  }
+  form input, form select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+  }
+  button {
+    background-color: #b30000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    margin-top: 1.5em;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: #8b0000;
+  }
+  #result {
+    margin-top: 1.5em;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333;
+  }
+  footer {
+    margin-top: 1.5em;
+    font-size: 0.9em;
+  }
